# Copyright 2016 Freeman Zhang <zhanggyb@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

# gui
add_subdirectory(idle-task)
add_subdirectory(display)
add_subdirectory(application)
add_subdirectory(window)
add_subdirectory(dialog)
add_subdirectory(timer)
# add_subdirectory(gui-main-window)
add_subdirectory(slider)
add_subdirectory(gl-view)
add_subdirectory(linear-layout)
add_subdirectory(relative-layout)

